--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
             </div>
             
             <div class="content-card">
-                <h3><span>💬</span> 7. Что важно помнить</h3>
+                <h3><span>💭</span> 7. Что важно помнить</h3>
                 <p>Когда врач говорит «операция», это не приговор — это путь к выздоровлению.</p>
                 <p>Такой шаг уже помог тысячам пациентов полностью избавиться от болезни.</p>
                 <p>Слово «операция» — это не страх, а шанс. Шанс жить без туберкулёза.</p>
@@ -557,7 +557,7 @@
                 </div>
                 
                 <div class="visual-item">
-                    <h3><span>💭</span> Отзывы пациентов</h3>
+                    <h3><span>💬</span> Отзывы пациентов</h3>
                     <div style="display: flex; flex-direction: column; gap: 15px;">
                         <div style="background-color: #fff4e6; padding: 15px; border-radius: 5px;">
                             <p style="font-style: italic;">«Я боялся операции, но теперь дышу свободно и живу без лекарств.»</p>
