--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                         </div>
                     </div>
                     <div class="explanation">
-                        <p><strong>Правильный ответ — A.</strong> Удаление очага не восстанавливает лёгкое мгновенно, функции остаются частично ограниченными, особенно если удалено значительное количество ткани</p>
+                        <p><strong>Правильный ответ — A.</strong> После удаление очага легкое лучше функционирует, но не восстанавливает мгновенно. Функции могут оставаться частично ограниченными, особенно если удалено значительное количество ткани. </p>
                     </div>
                 </div>
                 
