--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
         <footer>
             <div class="container">
                 <p><strong>Хирургическое лечение туберкулёза</strong></p>
-                <p class="footer-info">Данный материал предоставляет информацию о возможностях хирургического лечения туберкулёза и предназначен для пациентов, впервые выявленных с этим заболеванием.</p>
+                <p class="footer-info">Данный материал предоставляет предварительную информацию пациентам о возможностях хирургического лечения туберкулёза.</p>
                 <p class="footer-info">Проконсультируйтесь с вашим лечащим врачом для получения индивидуальных рекомендаций.</p>
             </div>
         </footer>
