--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     <header>
         <div class="container">
             <h1>Хирургическое лечение туберкулёза</h1>
-            <p>Краткая информация для пациентов, впервые выявленных с туберкулёзом</p>
+            <p>Краткая информация для пациентов</p>
         </div>
     </header>
     
