--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
             
             <div class="quiz-container">
                 <div class="quiz-item active" id="quiz-1">
-                    <!-- <div class="quiz-question">1/4. Зачем пациенту могут предложить хирургическое лечение туберкулёза?</div> -->
-                    <div class="quiz-options">
+    <div class="quiz-question">1/4. Зачем пациенту могут предложить хирургическое лечение туберкулёза?</div>
+    <div class="quiz-options">
                         <div class="quiz-option" data-correct="true">
                             <span class="option-letter">A</span>
                             <span class="option-text">Чтобы достичь излечения и снизить риск рецидива.</span>
