--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                             <p style="margin-top: 12px; text-align: right; font-size: 1.05em;">— Мария, 38 лет</p>
                         </div>
                         <div style="background-color: #fff4e6; padding: 18px; border-radius: 8px;">
-                            <p style="font-style: italic;">«Я счастлива, что наконец-то избавилась от этой болезни. Если бы не операция, эти остатки туберкулёза всегда были бы во мне, напоминая о болезни. Теперь я могу жить, не думая об этом.»</p>
+                            <p style="font-style: italic;">«Я счастлива, что наконец-то избавилась от этой болезни. Если бы не операция, эти остатки туберкулёза всегда были со мной, напоминая о болезни. Теперь я могу жить, не думая об этом.»</p>
                             <p style="margin-top: 12px; text-align: right; font-size: 1.05em;">— Елена, 45 лет</p>
                         </div>
                     </div>
