--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
         <!-- Новый блок "Вопросы для хирурга" -->
         <section class="questions-section">
             <div class="container">
-                <h2 class="section-title">📝 Лист «Вопросы для хирурга»</h2>
+                <h2 class="section-title">📝 Ваши вопросы хирургу</h2>
                 <p style="margin-bottom: 30px; font-size: 1.2rem; color: #555;">Обратите внимание: ответы на эти вопросы могут различаться в зависимости от вашей индивидуальной ситуации и особенностей заболевания.</p>
                 
                 <div class="questions-container">
