--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
         <section class="questions-section">
             <div class="container">
                 <h2 class="section-title">📝 Ваши вопросы хирургу</h2>
-                <p style="margin-bottom: 30px; font-size: 1.2rem; color: #555;">Обратите внимание: ответы на эти вопросы могут различаться в зависимости от вашей индивидуальной ситуации и особенностей заболевания.</p>
+                <p style="margin-bottom: 30px; font-size: 1.2rem; color: #555;">Задайте эти вопросы хирургу на консультации. Ответы на эти вопросы могут различаться в зависимости от индивидуальной ситуации и особенностей заболевания.</p>
                 
                 <div class="questions-container">
                     <div class="questions-category">
